--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "co-views": "~0.2.0",
+    "gulp": "^3.9.0",
     "koa": "~0.14.0",
     "koa-bodyparser": "~1.3.0",
     "koa-response-time": "~1.0.2",
@@ -17,5 +18,9 @@
   "repository": {
     "type": "git",
     "url": "http://gitlab.fexot.meiliworks.com/newroads/silkworm.git"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0"
   }
 }
