--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-es6-module-transpiler": "^0.2.1",
-    "gulp-if": "^1.2.5"
+    "gulp-if": "^1.2.5",
+    "gulp-rev": "^5.0.1",
+    "gulp-rev-replace": "^0.4.2",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0"
   },
   "license": "MIT",
   "engines": {
