--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "gulp-browserify": "^0.5.1",
     "gulp-es6-module-transpiler": "^0.2.1",
     "gulp-if": "^1.2.5",
+    "gulp-less": "^3.0.3",
+    "gulp-rename": "^1.2.2",
     "gulp-rev": "^5.0.1",
     "gulp-rev-replace": "^0.4.2",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "lazypipe": "^0.2.4"
   },
   "license": "MIT",
   "engines": {
