--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "swig": "~1.4.2"
   },
   "devDependencies": {
+    "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
     "gulp-browserify": "^0.5.1",
