--- a/rev-manifest.json
+++ b/rev-manifest.json
@@ -1,7 +1,8 @@
 {
   "js/lib/jquery.js": "js/lib/jquery-42d1f3671d.js",
   "css/common/base.css": "css/common/base-eb49103656.css",
+  "img/t.png": "img/t-db195e55ed.png",
   "js/page/index/index.js": "js/page/index/index-bbe5a64ddf.js",
-  "css/page/index.css": "css/page/index-ed263c09e4.css",
+  "css/page/index.css": "css/page/index-8bb2c7a3e9.css",
   "js/page/index/menu.js": "js/page/index/menu-374c75dc5e.js"
 }
