--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
     "swig": "~1.4.2"
   },
   "devDependencies": {
+    "browser-sync": "^2.7.12",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
     "gulp-browserify": "^0.5.1",
     "gulp-es6-module-transpiler": "^0.2.1",
     "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.3.0",
     "gulp-less": "^3.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^5.0.1",
     "gulp-rev-replace": "^0.4.2",
+    "gulp-server-livereload": "^1.4.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "lazypipe": "^0.2.4"
+  },
+  "scripts": {
+    "start": "node --harmony index.js"
   },
   "license": "MIT",
   "engines": {
