--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.3.0",
     "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^5.0.1",
     "gulp-rev-replace": "^0.4.2",
