--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gulp-rev-replace": "^0.4.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "lazypipe": "^0.2.4"
+    "lazypipe": "^0.2.4",
+    "yargs": "^3.14.0"
   },
   "scripts": {
     "start": "node --harmony index.js"
