--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.2",
   "description": "a node web framework",
   "dependencies": {
-    "co-views": "~0.2.0",
-    "koa": "~0.14.0",
-    "koa-bodyparser": "~1.3.0",
-    "koa-response-time": "~1.0.2",
-    "koa-static-cache": "~3.0.1",
-    "swig": "~1.4.2"
+    "co-views": "^1.0.0",
+    "koa": "^0.21.0",
+    "koa-bodyparser": "^2.0.0",
+    "koa-response-time": "^1.0.2",
+    "koa-static-cache": "^3.1.1",
+    "swig": "^1.4.2"
   },
   "devDependencies": {
     "browser-sync": "^2.7.12",
