--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "swig": "^1.4.2"
   },
   "devDependencies": {
+    "babel-runtime": "^5.6.15",
     "browser-sync": "^2.7.12",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
