--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "description": "a node web framework",
   "dependencies": {
+    "babel-runtime": "^5.6.15",
     "co-views": "^1.0.0",
     "koa": "^0.21.0",
     "koa-bodyparser": "^2.0.0",
@@ -12,7 +13,6 @@
     "swig": "^1.4.2"
   },
   "devDependencies": {
-    "babel-runtime": "^5.6.15",
     "browser-sync": "^2.7.12",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
@@ -27,8 +27,7 @@
     "gulp-rev-replace": "^0.4.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "lazypipe": "^0.2.4",
-    "yargs": "^3.14.0"
+    "lazypipe": "^0.2.4"
   },
   "scripts": {
     "start": "node --harmony index.js"
