--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "co-views": "^1.0.0",
     "koa": "^0.21.0",
     "koa-bodyparser": "^2.0.0",
+    "koa-favicon": "^1.2.0",
     "koa-response-time": "^1.0.2",
     "koa-session": "^3.3.0",
     "koa-static-cache": "^3.1.1",
