--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "koa_app",
-  "version": "0.0.2",
-  "description": "a node web framework",
+  "name": "Zen",
+  "version": "0.0.3",
+  "description": "A Node Web Framework",
   "dependencies": {
     "babel-runtime": "^5.6.15",
     "co-views": "^1.0.0",
@@ -18,7 +18,6 @@
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
-    "gulp-es6-module-transpiler": "^0.2.1",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.3.0",
     "gulp-less": "^3.0.3",
@@ -34,12 +33,12 @@
   "scripts": {
     "start": "node --harmony index.js"
   },
-  "license": "MIT",
   "engines": {
     "node": ">= 0.11.13"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ygm125/silkworm"
-  }
+    "url": "https://github.com/ygm125/Zen"
+  },
+  "license": "MIT"
 }
